src/App.css
body {
  background-image: url("../public/backgroun-pattern.png");
  color: white;
}

nav {
  /* overflow: hidden; */
  background-color: black;
  /* position: fixed; */
  width: 100%;
  font-family: 'Manrope', sans-serif;
  font-weight: 600;
}

.list {
  list-style-type: none;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: static;
}

.items a {
  color: white;
  text-decoration: none;
}

.items {
  font-size: small;
  text-transform: uppercase;
  padding: 10px;
}

.app-header {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  position: static;
}

.nav-btn {
  display: none;
  background-color: black;
  width: 25%;
  border: 0px solid white;
}

#nav-img {
  width: 100%;
}

#app-img {
  width: 35%;
  margin-left: 33%;
}

/* app tsx */

.app-tsx {
  text-align: center;
}

/* home page  */
.home-page {
  font-family: 'Manrope', sans-serif;
  text-align: center;;
  border-radius: 10px;
  padding: 10px;
  
}

.home-link {
  border-radius: 20px;
  padding: 10px;
  font-family: 'Manrope', sans-serif;
  font-weight:600;
  background-color: transparent;
  color: white;
  border: 2px solid white;
}

/* create listing form  */

.create-listing-form {
  align-items: center;
  display: flex;
  justify-content: center;
}

.form {
  border-radius: 20px;
  box-sizing: border-box;
  padding: 20px;
  width: 320px;
}

.title {
  color: #eee;
  font-family: sans-serif;
  font-size: 36px;
  font-weight: 600;
  margin-top: 30px;
}

.subtitle {
  color: #eee;
  font-family: sans-serif;
  font-size: 16px;
  font-weight: 600;
  margin-top: 10px;
}


.input-container {
  height: 50px;
  position: relative;
  width: 100%;
}

.ic1 {
  margin-top: 40px;
}

.ic2 {
  margin-top: 30px;
}

.input {
  background-color: black;
  border-radius: 12px;
  border: 0;
  box-sizing: border-box;
  color: #eee;
  font-size: 18px;
  height: 100%;
  outline: 0;
  padding: 4px 20px 0;
  width: 100%;
}

.cut {
  background-color: white;
  opacity: .2;
  border-radius: 10px;
  height: 20px;
  left: 20px;
  position: absolute;
  top: -20px;
  transform: translateY(0);
  transition: transform 200ms;
  width: 80px;
}

.cut-short {
  width: 50px;
}

.input:focus ~ .cut,
.input:not(:placeholder-shown) ~ .cut {
  transform: translateY(8px);
}

.placeholder {
  color: white;
  font-family: sans-serif;
  left: 20px;
  line-height: 14px;
  pointer-events: none;
  position: absolute;
  transform-origin: 0 50%;
  transition: transform 200ms, color 200ms;
  top: 20px;
}

.input:focus ~ .placeholder,
.input:not(:placeholder-shown) ~ .placeholder {
  transform: translateY(-30px) translateX(10px) scale(0.75);
}

.input:not(:placeholder-shown) ~ .placeholder {
  color: white;
}

.input:focus ~ .placeholder {
  color: white;
}

.submit {
  background-color: transparent;
  font-family: 'Manrope', sans-serif;
  font-weight: bold;
  border-radius: 30px;
  border: 2px solid white;
  box-sizing: border-box;
  color: #eee;
  cursor: pointer;
  font-size: 18px;
  height: 50px;
  margin-top: 38px;
  outline: 0;
  text-align: center;
  width: 100%;
}

.submit:active {
  background-color: white;
  opacity: .2;
  color: black;
  border: 2px solid black;
}

.photo-trade {
  background-color: black;
  border-radius: 12px;
  border: 0;
  box-sizing: border-box;
  padding: 5px;
  margin-top: 30px;
}

/* listing card */

.listing-card {
  display: flex;
  margin: 10px;
  background-color: rgba(255,255,255,.1);
  border: 2px solid white;
  border-radius: 20px;
  align-content: center;
  padding: 10px;
}

.listing-card img {
  border-radius: 10px;
  width: 20%;
  height: 20%;
  justify-self: flex-start;
  align-self: center;
  flex-grow: 1;
  border: 1px solid white;
}

.listing-card-details {
  margin: 10px;
  flex-grow: 5;
  justify-self: flex-end;
  align-self: center;
}
.listing-card-details h1 {
  font-size: medium;
}

.listing-card-details button {
  background-color: black;
  font-family: 'Manrope', sans-serif;
  font-weight: bold;
  border-radius: 30px;
  border: 2px solid white;
  box-sizing: border-box;
  color: #eee;
  cursor: pointer;
  font-size: 18px;
  height: 50px;
  outline: 0;
  text-align: center;
  padding: 10px;
}
.listing-card-details button:active {
  background-color: white;
  color: black;
  border: 2px solid black;
}

/* search  */

.search-component-actions {
  background-color: rgba(255, 255, 255, .1);
  border-radius: 20px;
  padding: 10px;
  border: 2px solid white;
  margin: 10px;
}
.search-component-actions input {
  background-color: black;
  color: white;
  border-radius: 10px;
  padding:10px;
  border: 2px solid white;
}

#search-component-button {
  background-color: transparent;
  width: 30%;
  color: white;
  border: 0px
}
.search-component img {
  width: 50%;
}
#search-reset-button {
  margin-top: 10px;
  background-color: transparent;
  width: 30%;
  color: white;
  border: 0px
}
.sort-icons {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.sort-icon {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}


@media screen and (max-width: 575px) {
  .nav-btn {
    display: block;
  }
}
@media screen and (min-width: 575px) {
  #app-img {
    width: 10%;
    margin: 0 auto;
    margin-top: 20px;
  }
}

